# AgentTester

./: .gitignore  README.md  build_exe.bat  model_list.json  run.bat  test_case.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
test_case/: test_case.json
