[package]
name = "agent-tester"
version = "0.1.0"
description = "ListAgent Test Suite - Prompt & Tool verification dashboard"
edition = "2021"

[lib]
name = "agent_tester_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
